# STM32

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  flash_app_usb_ota.ps1  flash_ota_all.ps1  make_ota_package.ps1  skills.md  system-interface-doc.md  w800_at_manual.txt
ARTPI/: .gitignore  README.md
ARTPI/Desktop/ArtPiGatewayStudio/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.ps1  test.ps1
ARTPI/Desktop/ArtPiGatewayStudio/qml/: IndustrialCenter.qml  Main.qml
ARTPI/Desktop/ArtPiGatewayStudio/qml/components/: DeviceCard.qml  NavButton.qml
ARTPI/Desktop/ArtPiGatewayStudio/src/: artpi_client.cpp  artpi_client.h  device_list_model.cpp  industrial_manager.cpp  main.cpp
ARTPI/Desktop/ArtPiGatewayStudio/tests/: mqtt_test_broker.py
ARTPI/Tools/: gateway_ota.py  modbus_rtu_slave_simulator.py  modbus_rtu_test.ps1  modbus_sim_control.json  start_uart_log.ps1  test_ota_modbus_protocol.c  uart_log.ps1  upload_h563_ota.ps1
ARTPI/User/: app_device_config.c  app_device_config.h  app_flash_check.c  app_flash_check.h  app_gateway_boot.c  app_gateway_boot.h  app_gateway_ota.c  app_gateway_ota.h  app_h563_ota_cache.c  app_h563_ota_cache.h  app_h563_ota_master.c  app_h563_ota_master.h  app_ldc_vnext_test.c  app_ldc_vnext_test.h  app_modbus_rtu.c  app_modbus_rtu.h  app_netx.c  app_netx.h  app_netx_services.c  app_netx_services.h  app_wifi.c  app_wifi.h  includes.h  main.c  nx_user.h  ota_modbus_protocol.h  tx_user.h
ARTPI/docs/: THIRD_PARTY_NOTICES.md
STM32H563_App/: STM32H563_Threadx_usbx_cdc_acm.ioc  flash.ps1  flash_cmsis_dap.ps1
STM32H563_App/MDK-ARM/: STM32H563_Threadx_usbx_cdc_acm.uvprojx
STM32H563_App/user/: ISSUE_LOG.md  README_LAYERING.md
STM32H563_App/user/libmodbus/tests/: CMakeLists.txt  test_modbus.c
STM32H563_Bootloader/: README.md  clean.ps1  flash.ps1
STM32H563_Bootloader/MDK-ARM/: STM32H563_Threadx_usbx_cdc_acm.uvoptx  STM32H563_Threadx_usbx_cdc_acm.uvprojx  startup_stm32h563xx.s
STM32H563_Bootloader/user/: boot_protection.c  boot_protection.h  boot_security.c  boot_security.h  boot_shell.c  boot_trust_anchor.c  boot_trust_anchor.h  boot_usb_recovery.c  boot_usb_recovery.h  gd25lq128.c  ota_boot.c  ota_boot.h  ota_boot_private.h  ota_boot_v2.c  ota_boot_v2.h  ota_layout.h
STM32H563_Modbus/: README.md  build.ps1  build_threadx.ps1  check_project.ps1  flash.ps1  verify_image_address.ps1
STM32H563_Modbus/MDK-ARM/: STM32H563_Modbus.uvprojx  STM32H563_Modbus_ThreadX.uvprojx
STM32H563_Modbus/THREADX/: README.md  build.ps1  check_project.ps1  verify_image_address.ps1
STM32H563_Modbus/THREADX/Middlewares/ld_modbus/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
STM32H563_Modbus/THREADX/Middlewares/ld_modbus/integrations/ldc/: ld_modbus_ldc.c  ld_modbus_ldc.h
STM32H563_Modbus/docs/: board_resource_manifest.md  bringup_acceptance.md  bsp_architecture.md  build_report.md  clock_and_memory_contract.md  modbus_acceptance.md  packaging_contract.md  threadx_dma_w800_checkpoint.md  vendor_provenance.md
STM32H563_Modbus/luoji/: README.md  build.ps1  check_project.ps1  verify_image_address.ps1
STM32H563_Threadx_usbx_cdc_acm/: .mxproject  flash.ps1
STM32H563_Threadx_usbx_cdc_acm/MDK-ARM/: STM32H563_Threadx_usbx_cdc_acm.uvoptx  STM32H563_Threadx_usbx_cdc_acm.uvprojx
STM32H563_Threadx_usbx_cdc_acm/user/: README_LAYERING.md
art_pi_h750_boot/User/: boot_control.c  boot_control.h  boot_main.c  boot_security.c  boot_security.h  boot_spi_flash.c  boot_spi_flash.h  boot_uart.c  boot_uart.h  startup_stm32h750xx_boot.s
desktop-debug-assistant/: package-lock.json  package.json
docs/: MIGRATION.md  PROJECT_INDEX.md  PUBLICATION_CHECKLIST.md  README.md  THIRD_PARTY_NOTICES.md  architecture.md  at_core_api_audit.md  communication-porting.md  flash_and_recovery_runbook.md  h563_firmware_http_update.md  h563_industrial_ota_architecture.md  h563_industrial_ota_execution.md  h563_ota_baseline_20260710.md  h563_ota_fault_injection_report.md  h563_secure_ota_release_runbook.md  h5_workspace_layout.md  issue-log.md  ldc-modbus-bsp-unification.md  message-bus.md  stm32-communication-architecture.md  ui-asset-http-update.md  usb.md  usb_ota_bootloader_flow.md  w800_http_range_acceptance_report.md  w800_http_range_execution_plan.md  w800_ui_asset_update.md  workflow.md
projects/chpm/chpm/tests/host/: CMakeLists.txt  drv_w25qxx.h  mock_flash.c  mock_flash.h  test_param_store.c
projects/stm32f401-chpm/tests/host/: CMakeLists.txt  mock_flash.c  mock_flash.h  test_dwin_rx_parser.c  test_dwin_tx_policy.c  test_modbus_param_policy.c  test_param_store.c
projects/stm32f767/ld_modbus_examples/STM32F767_ld_modbus_freertos/Middlewares/ld_modbus/: CMakeLists.txt
projects/stm32f767/ld_modbus_examples/STM32F767_ld_modbus_freertos/Middlewares/ld_modbus/docs/: STM32H563示例与LDC说明.md  architecture.md
projects/stm32f767/ld_modbus_examples/STM32F767_ld_modbus_freertos/Middlewares/ld_modbus/src/: ld_modbus_rtu_framer.c
projects/stm32h563-h5/STM32H563RIV6_app/user/usb/tests/: CMakeLists.txt
projects/stm32h563-h5/STM32H563_App_Layered_BSP/user/shell/tests/: CMakeLists.txt
simulators/lvgl/: CMakeLists.txt  build.ps1  cjk_chars.txt  lv_conf.h
simulators/lvgl/src/: ui_asset_store_sim.c
tests/: run_host_tests.ps1
tests/at/: CMakeLists.txt  test_at_command_plan.c
tests/ldc/: CMakeLists.txt  README.md  test_ldc.c  test_ldc_easy.c
tests/msg_bus/: CMakeLists.txt  test_msg_bus.c
tools/: build_ui_assets.ps1  generate_ref_page_img.ps1  new_h563_factory_release.ps1  ota_sign.py  request_ui_http_manifest_update.py  run_w800_http_range_stress.ps1  test_app_health.ps1  test_at_core_host.ps1  test_boot_usb_recovery.ps1  test_desktop_firmware_http.ps1  test_ota_boot_control.ps1  test_ota_boot_v2.ps1  test_ota_firmware_update.ps1  test_ota_security_policy.ps1  test_ota_signing.ps1  test_ota_uecc.ps1  test_ui_asset_rollback_guard.ps1  test_ui_asset_runtime.ps1  test_w800_http_range_fault.ps1  test_w800_mqtt_interrupt.ps1  test_w800_update_reset.ps1  verify_ui_asset_http_range.ps1
显示屏资料/: ST7796S+BOE3.52--Gamma2.2.ini
(+1289 files in other folders)
